my-style.css
/* google fonts

font-family: 'Audiowide', cursive;
font-family: 'Baloo', cursive;
font-family: 'Oregano', cursive;
font-family: 'Nova Round', cursive;
font-family: 'Nunito', sans-serif; */



#over.h3 {
     font-family: 'Nunito','Nova Round', 'Baloo', Bookman !important; 
    font-size: 30px !important;
}

body {margin: 0;
  
}

#nav-override{background-color: black important!}
 

#about-txt{
  font-family: 'Lora', 'Trebuchet MS', 'Source Sans Pro' !important;
  font-size: 18px;
  float: left;
  padding:10px 0; 
  color: white;
}

 #about-img{
  
  width: 45%;
  padding: 20px, 10px, 10px, 0;

}

#about{padding-top: 65px;
    padding-bottom: 20px;
    }


#resume{
    color:hotpink !important;
    font-family: 'Merriweather','Nunito','Nova Round', 'Baloo', Bookman;  
    margin-top: 0px !important;
      padding-top: 0pt !important; 

}
.resume{
  margin-top:0; 
  padding-top: 0;
  margin-bottom: 0;
    padding-bottom: 0;
}

#portfolio{
  margin-top:0; 
  padding-top: 0;
  margin-bottom: 0;
    padding-bottom: 40px;
}

.name{
    color:white !important;
    font-family: 'Nunito','Nova Round', 'Baloo', Bookman;  
    font-size: 36px; 
    padding-right: 10px;   
}


.nav-link{
    color:hotpink !important;
    font-family: 'Merriweather Sans','Nunito','Nova Round', 'Baloo', Bookman;  
    font-size: 24px;   
    
}


h1.land{
  color:white !important;
  font-family: 'Merriweather Sans','Nunito','Nova Round', 'Baloo', Bookman;  
  
  text-align: center;
  display: block;
  margin: auto;
}
h2.land{
  color:white !important;
  font-family: "Trebuchet MS", 'Source Sans Pro' !important;
  text-align: center;
  display: block;
  margin: auto;
  font-size: 24px;
}


.pink{
  color:hotpink !important;
  font-family: 'Merriweather','Nunito','Nova Round', 'Baloo', Bookman;  
  margin-top: 0px !important;
    padding-top: 0pt !important; 
}

/* ul.topnav {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2;
  position: fixed;
}


ul.topnav li {float: right;}

ul.topnav li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  float: right;
 
}

ul.topnav li a:hover:not(.active) {background-color: #111;}

ul.topnav li a.active {background-color: #4CAF50;}
#right {float: right;}

@media screen and (max-width: 600px) {
  ul.topnav li.right, 
  ul.topnav li {float: none;}
} */

